--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -159,6 +159,7 @@
       
         <%# 商品がない場合のダミー %>
         <%# 商品がある場合は表示されないようにしましょう %>
+        <% unless @items = '' %>
         <li class='list'>
           <%= link_to '#' do %>
           <%= image_tag "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/10/a004.png", class: "item-img" %>
@@ -178,6 +179,7 @@
         </li>
         <%# //商品がある場合は表示されないようにしましょう %>
         <%# /商品がない場合のダミー %>
+        <% end %>
     </ul>
   </div>
   <%# /商品一覧 %>
