エラーメッセージの表示

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -30,8 +30,9 @@
       </p>
     </div>
     <%# /支払額の表示 %>
-
-    <%= form_with(model:@order, id: 'charge-form', class: 'transaction-form-wrap',local: true) do |f| %>
+   
+    <%= form_with(model:@order_address, id: 'charge-form', class: 'transaction-form-wrap',local: true) do |f| %>
+    <%= render 'shared/error_messages', model: @order %>
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
       <h1 class='info-input-haedline'>
@@ -70,6 +71,7 @@
         <%= f.text_field :cvc,class:"input-default", id:"card-cvc", placeholder:"カード背面4桁もしくは3桁の番号", maxlength:"4" %>
       </div>
     </div>
+    
     <%# /カード情報の入力 %>
     
     <%# 配送先の入力 %>
