--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -31,8 +31,8 @@
     </div>
     <%# /支払額の表示 %>
    
-    <%= form_with(model:@order_address, id: 'charge-form', class: 'transaction-form-wrap',local: true) do |f| %>
-    <%= render 'shared/error_messages', model: @order %>
+    <%= form_with(model:@order, url: order_address_path, id: 'charge-form', class: 'transaction-form-wrap',local: true) do |f| %>
+    <%= render 'shared/error_messages', model: f.object %>
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
       <h1 class='info-input-haedline'>
